
[workspace]
members = ["editor", "executor", "executor-wasm", "executor-android", "export-cli", "game", "game-dylib"]
resolver = "2"

[workspace.dependencies.fyrox]
version = " 1.0.1"
default-features = false
[workspace.dependencies.fyroxed_base]
version = " 1.0.1"
default-features = false
[workspace.dependencies.fyrox-build-tools]
version = " 1.0.1"

# 用於熱重載的單獨建置設定檔。這些設定檔確保建置工件
# 熱重載將被放入自己的資料夾中並且不會幹擾標準（靜態）
# linking.
[profile.dev-hot-reload]
inherits = "dev"
[profile.release-hot-reload]
inherits = "release"

# 在調試版本中優化引擎，但保留項目代碼未優化。
# 透過使用這種技術，您仍然可以調試程式碼，但引擎將完全被
# 優化和調試建置不會非常慢。透過此選項，您可以
# 在調試模式下編譯你的遊戲，這比發布要快得多（至少 x3）。
[profile.dev.package."*"]
opt-level = 3

# game code 本身也要帶點優化，否則 stress 場景下 lerp / UI 迴圈拖慢幀率。
# opt-level = 1 讓 hot loop 快 2-3 倍，debug info 仍保留。
[profile.dev]
opt-level = 1
