
[package]
name = "executor-android"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
# 該資料夾用作資產的臨時存儲。項目導出器將克隆所有內容
# 從 data 資料夾到此資料夾，cargo-apk 將使用這些資源建立 apk。
assets = "assets"
strip = "strip"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 30
max_sdk_version = 29

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "fyrox-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
fyrox = { workspace = true }
omfx = { path = "../game" }
