
[package]
name = "omfx"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = {workspace = true}
uuid = { version = "1", features = ["v4"] }
omoba-core = { path = "../../omoba-core", features = ["kcp"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
default = ["fyrox/default"]
dylib-engine = ["fyrox/dylib"]
