
[package]
name = "omfx"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = {workspace = true}
uuid = { version = "1", features = ["v4"] }
omoba-core = { path = "../../omoba-core", features = ["kcp"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

# Phase 3 lockstep simulator deps:
# omfx imports omb-as-lib to run the full ECS dispatcher in a worker thread.
# specs uses the forked path (matches omb) so Entity Serialize impls and
# component types are unified across the FFI boundary.
omobab = { path = "../../omb", default-features = false, features = ["kcp"] }
specs = { path = "../../specs", features = ["derive", "serde"] }
omoba-sim = { path = "../../omoba-sim", features = ["abi-stable"] }
failure = "0.1.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
default = ["fyrox/default"]
dylib-engine = ["fyrox/dylib"]
